grammar.js
    module: $ => seq(
      optional($.module_doc_comment),
      optional($.moduleTk),
      optional($.prelude),
      repeat($.import),
      repeat($._command),
    ),

    _command: $ => choice(
      $.check,
      $.eval,
      $.print,
      $.reduce,
      $.namespace,
      $.section,
      $.public_section,
      $.end,
      $.variable,
      $.universe,
      $.open,
      $.export,
      $.attribute_cmd,
      $.initialize,
      $.set_option,
      $.deriving_cmd,
      $.assert_cmd,
      $.decl_doc_cmd,
      $.grind_pattern_cmd,
      $.alias_cmd,
      $.notation_decl_cmd,
      $.syntax_cmd,
      $.macro_cmd,
      $.macro_rules_cmd,
      $.elab_rules_cmd,
      $.register_cmd,
      $.unif_hint_cmd,
      $.declare_syntax_cat_cmd,
      $.mutual,
      $.declaration,
    ),

    /* `mutual … end` groups mutually-recursive declarations. Like
       `namespace`/`section`/`end`, it is modeled as a flat marker
       rather than a nesting block: the inner declarations parse as
       siblings and the closing `end` is the ordinary `end` command.
       Pairing is left to tooling, consistent with the rest of the
       grammar (and avoids an `end`-disambiguation conflict). */
    check:  $ => seq(choice('#check', '#check_failure'),  field('term', $._term)),
    _type_spec: $ => field('type', seq(':', $._term)),

    /* `where f := v g := w …` body of a `def name : T where …` —
       declares a value of a structure/instance type by field. The
       indented form uses scanner-emitted INDENT/NEWLINE/DEDENT so a
       field whose RHS is a multi-line term doesn't accidentally
       swallow the next field's name. The body is optional: an empty
       `where` clause is legal when the structure has no fields.
       `where ...` is Lean's "fill all required fields with sorry"
       elision marker.

       The same `where` clause also introduces auxiliary helper
       definitions on a regular `def`/`theorem`:
         def f x := body
         where
           helper := …
           another | pat => …
       A `where_item` covers both forms: a struct field
       (`name [binders] := value`) or a function-style helper
       (`name | pat => … | pat => …`). */
    _binders: $ => alias(repeat1($._binder), $.binders),
    _binder_ident: $ => choice($.identifier, $.hole),

    explicit_binder: $ => seq(
      '(',
      choice(
        repeat1(field('name', $._binder_ident)),
        field('name', $.anon_ctor_binder),
      ),
      optional($._type_spec),
      optional(field('default', seq(':=', $._term))),
      ')',
    ),

    _term: $ => choice($._lead_term, $._op_term),

    _lead_term: $ => choice(
      $.fun,
      $.let,
      $.have,
      $.suffices,
      $.by_cases,
      $.show,
      $.if_then_else,
      $.forall,
      $.exists,
      $.sigma,
      $.big_op_binder,
      $.by,
      $.do_block,
      $.match,
      $.tactic_case,
    ),

    _op_term: $ => choice(
      $._term_atom,
      $.app,
      $.proj,
      $.subscript,
      $.postfix_op,
      $.binary_op,
      $.unary_op,
      $.universe_app,
      $.induction,
    ),

    _term_atom: $ => choice(
      $.identifier,
      $.num_lit,
      $.scientific_lit,
      $.char_lit,
      $.str_lit,
      $.raw_string,
      $.interpolated_str,
      $.name_lit,
      $.hole,
      $.synth_hole,
      $.named_hole,
      $.cdot,
      $.dot_ident,
      $.type_const,
      $.sort_const,
      $.prop_const,
      $.true_const,
      $.false_const,
      $.bot_const,
      $.top_const,
      $.empty_const,
      $.goal_const,
      $.sorry,
      $.paren,
      $.anon_ctor,
      $.anon_subterm,
      $.quotient_lit,
      $.floor_lit,
      $.ceil_lit,
      $.norm_lit,
      $.dbl_angle_lit,
      $.list_lit,
      $.range_lit,
      $.array_lit,
      $.struct_lit,
      $.set_builder,
      $.subtype_lit,
      $.rest_pat,
      $.prec_annotated,
      $.pct_macro,
      $.antiquot,
      $.explicit_mode,
      $.quotation,
    ),

    /* `.foo` is Lean's anonymous-namespace projection (used for
       constructors and methods). Distinct from `e.foo` projection. */
    hole:        _ => '_',
    synth_hole:  _ => '?_',
    named_hole:  $ => seq('?', $.identifier),
    /* `·` (cdot) — placeholder for the next argument of an anonymous
       function. `(·.foo bar)` reads as `(fun x => x.foo bar)`. */
    type_const: $ => prec.right(1, seq('Type', optional(choice(
      $.identifier,
      '*',
    )))),
    sorry:       _ => choice('sorry', 'admit'),

    paren: $ => seq(
      '(',
      optional(choice(
        /* Named-argument form: `(name := value)` with an optional
           trailing arg list (`(attr := simps, implicit_reducible)`). */
        seq(
          field('arg_name', $.identifier),
          ':=',
          field('arg_value', $._term),
          repeat(seq(',', $._term)),
        ),
        /* Operator section: `(↑)`, `(↓)`, `(↥)` — bare prefix/coercion
           operator inside parens, treated as a function value. */
        field('section', choice('↑', '↓', '↥')),
        /* Regular parenthesized term, optionally type-ascribed, with
           an optional tuple tail. */
        seq(
          $._term,
          optional($._type_spec),
          repeat(seq(',', $._term)),
        ),
      )),
      ')',
    ),

    anon_ctor: $ => seq('⟨', sep0($._term, ','), '⟩'),

    /* `‹T›` — Lean's anonymous-subterm reference, filled by typeclass
       resolution. Used like `‹Group α›` to grab the ambient instance. */
    floor_lit: $ => seq('⌊', $._term, choice('⌋', '⌋₊')),
    ceil_lit: $ => seq('⌈', $._term, choice('⌉', '⌉₊')),

    /* `‖x‖` norm / `‖x‖₊` non-negative norm. The `‖` open and close
       are external scanner tokens (see externals) so the symmetric
       glyph doesn't blow up generation. The scanner folds the optional
       trailing `₊` into the close token. */
    norm_lit: $ => seq($._norm_open, $._term, $._norm_close),

    /* `⟪x, y⟫` — double-angle-bracket constructor (inner products,
       spans, pairings). Distinct open/close brackets, so safe. */
    dbl_angle_lit: $ => seq('⟪', sep0($._term, ','), '⟫'),

    /* `*` is valid as a simp-set element (`simp [*, foo]`). */
    list_lit: $ => seq('[', sep0(choice($._term, $.star), ','), ']'),
    app: $ => prec.left(PREC.app, seq(
      field('fn', $._op_term),
      field('arg', choice($._term_atom, $._lead_term)),
    )),

    proj: $ => prec.left(PREC.proj, seq(
      field('term', $._op_term),
      token.immediate('.'),
      field('field', choice($.identifier, $.num_lit)),
    )),

    /* `Foo.{u₁, u₂}` or `NonemptyType.{0}` — explicit universe-level
       application. The `.{` is one immediate token so it wins the
       longest-match race against the proj-dot. Numeric levels appear
       for `Type 0` etc. */
    postfix_op: $ => prec.left(PREC.proj, seq(
      field('term', $._op_term),
      field('op', choice(
        'ᵒᵖ', 'ᵐᵒᵖ', 'ᵒᵈ', '⁻¹', 'ᵀ', '†',
        'ᶜ', 'ˣ', '✝',
        '⁺',  /* positive part (`a⁺`) */
      )),
    )),

    /* `arr[idx]` — array/dict indexing. Distinguished from `f [list]`
       by the immediate `[` (no whitespace between fn and bracket).
       `arr[idx]?` and `arr[idx]!` are option-returning and panicking
       variants. `arr[idx]'proof` supplies an in-bounds proof. */
    unary_op: $ => prec(PREC.prefix, seq(
      field('op', choice('-', '¬', '!', '←', '<-', '#',
        /* Coercion prefixes. */
        '↥', '↑', '↓', '⇑',
        /* Heyting negation, co-Heyting boundary (Mathlib). */
        '￢', '∂',
        /* Lean's "borrow ref" prefix on argument types. */
        '@&')),
      field('rhs', $._op_term),
    )),

    binary_op: $ => choice(
      prec.right(PREC.arrow, seq(
        field('lhs', $._op_term),
        field('op', choice(
          '→', '->', '⟶',
          /* Mathlib homomorphism arrows (without bracket param —
             `→ₗ[R]` parses as `→ₗ` + `[R]` applied to rhs).
             `≃` itself is in the cmp set; only the variants here. */
          '→+', '→*', '→+*', '→ₗ', '→ₐ', '→ₒ',
          '→ₙ+', '→ₙ*', '→ₙ+*', '→ₑ', '→ₑ+', '→ₑ*',
          '≃+', '≃*', '≃+*', '≃ₗ', '≃ₐ', '≃ₒ',
          '→ᵃ', '≃ᵃ',
          '↪', '↠', '↪o', '↪+', '↪*', '↪+*',
          '⇨',       /* Heyting implication */
          '⥤',       /* Mathlib functor arrow */
          '≌',       /* category equivalence */
          '⟹',       /* natural transformation (`F ⟹ G`) */
        )),
        field('rhs', $._term),
      )),
      prec.right(PREC.iff, seq(
        field('lhs', $._op_term),
        field('op', choice('↔', '<->', '⇔')),
        /* `p ↔ ∃ x, …` is extremely common in Mathlib. */
        field('rhs', $._term),
      )),
      prec.left(PREC.or, seq(
        field('lhs', $._op_term),
        field('op', choice('∨', '||', '⊔', '⊻')),  /* ⊻ = xor */
        /* Lattice-sup RHS often holds a big-op or `if`. */
        field('rhs', $._term),
      )),
      prec.left(PREC.and, seq(
        field('lhs', $._op_term),
        field('op', choice('∧', '&&', '⊓', '⊼')),  /* ⊼ = nand */
        /* Lattice-inf RHS often holds a big-op or `if`. */
        field('rhs', $._term),
      )),
      prec.left(PREC.cmp, seq(
        field('lhs', $._op_term),
        field('op', choice(
          '=', '==', '≠', '!=',
          '<', '≤', '<=',
          '>', '≥', '>=',
          '∈', '∉', '⊆', '⊂', '⊇', '⊃', '⊑', '⊒',
          '≡', '≢', '~', '≃', '≅', '≈', '≉',
          '≍', '≃ₘ', '≃ᵤ',  /* heq, measureable-equiv, uniform-equiv */
          '∣', '∤',  /* divides, not-divides */
          '⋖', '⋗',  /* covby (atomic-cover) and its dual */
          '⊨', '⇒',  /* entailment / relation-implication (Relator) */
          '≺', '≼',  /* strict and non-strict order relations */
          '⊣',       /* adjunction (`F ⊣ G`) */
        )),
        /* `a = fun x => …` and `a ≤ if p then x else y` are common
           enough that comparison RHS must allow lead terms. */
        field('rhs', $._term),
      )),
      prec.right(PREC.append, seq(
        field('lhs', $._op_term),
        field('op', choice('::', '::ᵣ', '::ₘ')),
        field('rhs', $._op_term),
      )),
      /* `<;>` — tactic-combinator (run-on-all-goals); appears in
         tactic-block bodies. */
      prec.left(PREC.pipe, seq(
        field('lhs', $._op_term),
        field('op', '<;>'),
        field('rhs', $._op_term),
      )),
      prec.right(PREC.append, seq(
        field('lhs', $._op_term),
        field('op', '++'),
        field('rhs', $._op_term),
      )),
      prec.left(PREC.add, seq(
        field('lhs', $._op_term),
        field('op', choice(
          '+', '-', '∪', '\\',
          /* `∆` — set symmetric difference; `⊞` — boxplus;
             `↾` — restriction. (`⨁` is a big_op_binder prefix, not
             an infix operator — adding it here conflicts.) */
          '∆', '⊞', '↾',
          /* Mathlib torsor & substitution operators. */
          '-ᵥ', '+ᵥ', '▸',
        )),
        field('rhs', $._op_term),
      )),
      prec.left(PREC.mul, seq(
        field('lhs', $._op_term),
        field('op', choice(
          '*', '/', '%', '∩', '×', "×'", '×ˢ', '×ₗ', '•', '∙',
          /* `∫ x, f x ∂μ` — the measure marker binds the integrand
             to its measure. */
          '∂',
          /* Tensor and related Mathlib operators (without bracket
             param — `⊗ₜ[R]` parses as `⊗ₜ` + `[R]` consumed by app). */
          '⊗', '⊗ₜ', '⊗ₛ',
          /* Sum/direct-sum operators (Mathlib). */
          '⊕', '⊕ₗ',
          /* Product, convolution/star, and matrix-dot products. */
          '⨯', '∗', '⋆', '⬝',
          /* Circled/boxed products (applicative seq, external product). */
          '⊛', '⊠',
          /* Kronecker product, matrix-vector dot, Hadamard product,
             box product. */
          '⊗ₖ', '⬝ᵥ', '⊙', '◫',
        )),
        field('rhs', $._op_term),
      )),
      prec.right(PREC.pow, seq(
        field('lhs', $._op_term),
        field('op', '^'),
        field('rhs', $._op_term),
      )),
      prec.right(PREC.comp, seq(
        field('lhs', $._op_term),
        field('op', choice(
          '∘',
          /* Mathlib's set image / preimage operators. */
          "''", "⁻¹'",
          /* Category-theory morphism / functor / iso composition
             (Mathlib). */
          '≫', '⋙', '≪≫',
          /* Whiskering (bicategory) and circle-composition. */
          '◁', '⊚',
          /* Linear-map composition. */
          '∘ₗ',
        )),
        field('rhs', $._op_term),
      )),
      prec.left(PREC.pipe, seq(
        field('lhs', $._op_term),
        field('op', choice('|>', '<|')),
        /* `f <| have h := …; body` is common Mathlib. */
        field('rhs', $._term),
      )),
      /* `$` is right-associative function application without parens
         (`f $ g x = f (g x)`). Low precedence. */
      prec.right(PREC.arrow, seq(
        field('lhs', $._op_term),
        field('op', '$'),
        field('rhs', $._op_term),
      )),
      /* Monad/applicative and parser-combinator operators. Grouped
         together at "append" precedence since their actual notation
         precedences vary per definition. */
      prec.left(PREC.append, seq(
        field('lhs', $._op_term),
        field('op', choice(
          '>>', '<<', '>>>', '<<<',
          '>>=', '=<<',
          '<$>', '<*>', '<|>', '<&>', '<&&>', '<||>',
          '&&&', '|||', '^^^',
        )),
        field('rhs', $._op_term),
      )),
    ),

    /* ----- binder-using terms ------------------------------------------- */

    /* `fun arg1 arg2 => body`  or  `fun | pat => body | …` (match
       style). The latter is sugar for `fun x => match x with | … | …`. */
    fun: $ => prec.right(seq(
      choice('fun', 'λ'),
      choice(
        seq(
          $._binders,
          optional($._type_spec),
          choice('=>', '↦'),
          field('body', $._term),
        ),
        repeat1($.match_alt),
      ),
    )),

    /* `∀ x, body`, `∀ x : T, body`, `∀ x ∈ s, body` (sugar) — and
       Mathlib's `∀ b ≠ ⊥, body` / `∀ c ⊆ S, body` predicate-tail
       sugar. */
    forall: $ => prec.right(seq(
      /* `Π` is a deprecated Mathlib synonym for `∀` for product types. */
      choice('∀', 'forall', 'Π'),
      $._binders,
      optional(choice(
        $._type_spec,
        seq(
          field('rel', choice('∈', '∉', '≠', '⊆', '⊂')),
          field('bound', $._op_term),
        ),
      )),
      ',',
      field('body', $._term),
    )),

    big_op_binder: $ => prec.right(seq(
      choice(
        '⨆', '⨅', '∑', '∏',
        '⋃', '⋂', '⋀', '⋁', '⨁', '⨂', '∐',
        '∀ᵐ', '∃ᵐ',
        '∫', '∫⁻', '⨍',
      ),
      $._binders,
      optional(choice(
        $._type_spec,
        seq(choice('∈', '⊆', '⊂', 'in'), $._op_term),
        /* `∀ᵐ x ∂μ, p` — "for almost every x w.r.t. measure μ". */
        seq('∂', $._op_term),
      )),
      ',',
      field('body', $._term),
    )),

    /* `let` and `have` accept either the term form `let x := v; body`
       (or `let x := v body` via the block's NEWLINE separator) or the
       do-block statement form `let x := v` with the surrounding block
       supplying the body implicitly. Use `_` for the anonymous name.
       Inline binders are not modeled — write `let f := fun x => …`
       instead. The `←`/`<-` form is monadic bind for do-blocks. */
    have: $ => prec.right(seq(
      /* `haveI` is Mathlib's "have instance" variant. */
      choice('have', 'haveI'),
      /* Destructuring `have ⟨a, b⟩ := …` is common in Mathlib. */
      field('name', choice($._binder_ident, $.anon_ctor_binder)),
      optional($._type_spec),
      ':=',
      field('value', $._term),
      optional(seq(';', field('body', $._term))),
    )),

    /* `suffices g : T from proof` / `suffices g : T by tac` — a
       tactic-language reframing. The `from`/`by` proves the new
       suffices-goal, then the original goal is discharged via `g`. */
